--- a/docs/developer_guide/developer_guide.tex
+++ b/docs/developer_guide/developer_guide.tex
@@ -168,7 +168,7 @@
 			\emph{explanation}: it simply checks whether the snake has gone over the borders of the game or if it has eaten itself. Then, if this condition is true, the function returns true and plays the game over sound, setting the GAMEOVRPLAYED to true. Otherwise, it resets GAMAOVRPLAYED to false and return false.
 			\begin{figure}[h!]
 				\centering
-				\includegraphics[width=.6\linewidth]{end?.png}
+				\includegraphics[width=.6\linewidth]{end.png}
 				\caption{end? function in racket}
 			\end{figure}
 	\end{itemize}
